--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whattowear",
-  "homepage": "",
+  "homepage": "https://WhatToWear247.jumpingcrab.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "scp -r ./dist/* maurice_montaque101@WhatToWear247.jumpingcrab.com:/home/maurice_montaque101/frontend"
   },
   "dependencies": {
     "mongoose": "^8.13.0",
